--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <div class="info">
             <h1>NOMENJANAHARY Annice Florencia</h1>
             <p>Je suis une étudiante en quête de connaissances et d'expérience, passionnée par les nouvelles technologies. En plus d'être sérieuse, j'ai une capacité d'adaptation en toutes circonstances.</p>
-            <p>Pour en savoir un peu plus, voici quelques détails à mon sujet</p>
+            <p>Pour en savoir un peu plus, voici quelques détails à mon sujet.</p>
+            <p>Github: <a href="https://github.com/annice20/Mon_portfolio_avec_sass">https://github.com/annice20/Mon_portfolio_avec_sass</a></p>
         </div>
         <hr>
         <div class="info">
             <h2>A propos</h2>
             <p>Age: 23ans</p>
+            <p>Sexe: Femme</p>
             <p>Adresse: Lot IIB 303 Mahalavolona</p>   
         </div>
         <hr>
