--- a/index.html
+++ b/index.html
@@ -55,9 +55,29 @@
         </div>
         <hr>
         <div class="info">
-            <h2>Contact</h2>
-            <p><i class="fa fa-phone"></i> 0344887315</p>
-            <p><i class="fa fa-envelope"></i> anniceflorencia@gmail.com</p>
+            <div class="contactbody">
+                <h2>Contactez-moi</h2>
+                <div>
+                    <p><i class="fa fa-phone"></i> 0344887315</p>
+                    <p><i class="fa fa-envelope"></i> anniceflorencia@gmail.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Madagascar, Antananarivo</p>
+                </div>
+                <h2>Envoyez-moi un message</h2>
+                <div class="form"> 
+                    <div>
+                        <input type="text" placeholder="Nom">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div>
+                        <textarea placeholder="Message"></textarea>
+                    </div>
+                    <div class="envoyer">
+                        <a href="#">Envoyer</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
